[project]
name = "ambw_comfyui"
description = "Auto-MBW for ComfyUI loosely based on sdweb-auto-MBW. Nodes: auto merge block weighted"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/szhublox/ambw_comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ambw_comfyui"
Icon = ""
